# linkedin_job_postings_NLP

./: README.md
linkedin_job_posting/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
linkedin_job_posting/notebooks/: nlp_model.ipynb  nlp_model_fast.ipynb
