[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "linkedin_job_posting"
version = "0.0.1"
description = "NLP ML pipeline for linkedin job posting data"
authors = [
  { name = "mason" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["linkedin_job_posting"]
include = ["pyproject.toml", "linkedin_job_posting/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["linkedin_job_posting"]
force-sort-within-sections = true

